# polyroi

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
examples/: README.md  basic_jax_example.py  image_processing_example.py  parallel_processing_example.py
src/polyroi/: Point.py  Shape.py  __init__.py
