[metadata]
name = polyroi
version = 0.0.3
author = Taha Bouhsine
author_email = skywolf.mo@gmail.com
description = This tool help in extracting the region of interest in a given image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skywolfmo/polyroi
project_urls =
    Bug Tracker = https://github.com/skywolfmo/polyroi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
